# PySimData

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  pyproject.toml  run_examples.py
.claude/: settings.json
docs/: 2026-06-24-framework-design-and-new-simulation.md  2026-06-24-new-simulator-guide.md  2026-06-24-simdata-generator-design.md  2026-06-25-cpp-migration-plan.md  2026-07-01-basegenerator-refactor.md  2026-07-01-load-and-csv-design.md  2026-07-01-load-and-csv-plan.md  plan-template.md
docs/superpowers/plans/: 2026-06-24-simdata-generator-plan.md
examples/: 01_gaussian_grid.py  02_gaussian_beam.py  03_function_curve.py  04_erf_curve.py  04_special_functions.py  05_decay_functions.py  05_tanh_curve.py  06_cosh_curve.py  07_exp_decay.py  08_bilateral_gaussian.py  09_load.py
examples_cplus/: 01_gaussian_grid.cpp  02_gaussian_beam.cpp  03_function_curve.cpp  04_erf_curve.cpp  05_tanh_curve.cpp  06_cosh_curve.cpp  07_exponential_decay.cpp  08_bilateral_gaussian.cpp  09_from_config.cpp  CMakeLists.txt  test_config_bilateral_gaussian.json  test_config_cosh_curve.json  test_config_erf_curve.json  test_config_exponential_decay.json  test_config_function_curve.json  test_config_gaussian_beam.json  test_config_gaussian_grid.json  test_config_tanh_curve.json
include/pysimdata_cplus/: pysimdata_cplus.h
include/pysimdata_cplus/core/: config.h  generator.h
include/pysimdata_cplus/generators/: bilateral_gaussian.h  cosh_curve.h  erf_curve.h  exponential_decay.h  function_curve.h  gaussian_beam.h  gaussian_grid.h  tanh_curve.h
include/pysimdata_cplus/io/: csv_io.h  image_io.h
output/bilateral_gaussian/20260624_234745/: config.json  data.npy
output/cosh_curve/20260624_234745/: config.json  data.npy
output/decay_functions/: config.json  data.npy
output/decay_functions/20260624_232707/: config.json
output/erf_curve/20260624_234744/: data.npy
output/function_curve/: config.json  data.npy
output/function_curve/20260624_234743/: config.json  data.npy
output/gaussian_beam/: config.json
output/gaussian_beam/20260624_232706/: data.npy
output/gaussian_grid/: config.json
output/gaussian_grid/20260624_232706/: data.npy
output/gaussian_grid/20260624_234743/: config.json  data.npy
output/special_functions/: config.json  data.npy
output/special_functions/20260624_232707/: config.json
output/tanh_curve/20260624_234744/: config.json  data.npy
scripts/: compare_with_python.py  fetch_deps.sh  run_cpp_tests.sh
src/pysimdata/: __init__.py  base.py
src/pysimdata/function/: __init__.py  bilateral_gaussian.py  cosh_curve.py  curve.py  decay.py  erf_curve.py  exp_decay.py  function_curve.py  gaussian_beam.py  gaussian_grid.py  special.py  tanh_curve.py
src/pysimdata/gaussian/: __init__.py  grid.py
src/pysimdata_cplus/core/: config.cpp  generator.cpp
src/pysimdata_cplus/generators/: bilateral_gaussian.cpp  cosh_curve.cpp  erf_curve.cpp  exponential_decay.cpp  function_curve.cpp  gaussian_beam.cpp  gaussian_grid.cpp  tanh_curve.cpp
src/pysimdata_cplus/io/: csv_io.cpp  image_io.cpp
tests/pysimdata/: test_base.py  test_config.py  test_expected_shape.py  test_function.py  test_gaussian.py  test_image_format.py  test_load.py  test_registry.py
tests_pysimdata_cplus/: CMakeLists.txt  test_config.cpp  test_function.cpp  test_gaussian.cpp  test_generator.cpp  test_io.cpp  test_registry.cpp  test_save_load.cpp
